--- a/gmao/static/gmao/css/home.css
+++ b/gmao/static/gmao/css/home.css
@@ -209,6 +209,28 @@ table.dataTable tbody tr.even {
 }
 
 /*Portefeuille*/
+#portfolioTable td {
+    vertical-align: middle;
+}
+
+.panne-cell, .action-cell {
+    white-space: normal;
+    word-wrap: break-word;
+    min-width: 150px;
+}
+
+.action-cell .btn {
+    white-space: normal;
+    word-wrap: break-word;
+    text-align: center;
+}
+
+@media screen and (max-width: 767px) {
+    .panne-cell, .action-cell {
+        min-width: 100px;
+    }
+}
+
 #portfolioTable {
     width: 100% !important;
 }
