--- a/gmao/templates/gmao/home.html
+++ b/gmao/templates/gmao/home.html
@@ -10,6 +10,15 @@
         Logout
     </a>
     {% if user.role == 'ADMIN' %}
+        <!-- ... autres boutons ... -->
+        <a href="#doleances-section" class="btn btn-outline-info text-center text-light border-light btn-sm mx-2"
+           id="btn-nav">
+            Doléances
+        </a>
+        <a href="#personnel-section" class="btn btn-outline-info text-center text-light border-light btn-sm mx-2"
+           id="btn-nav">
+            Personnel
+        </a>
         <a href="{% url 'gmao:liste_interventions' %}"
            class="btn btn-outline-info text-center text-light border-light btn-sm mx-2" id="btn-nav">
             Liste des interventions
