--- a/templates/base.html
+++ b/templates/base.html
@@ -3,104 +3,79 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
-    <link rel="shortcut icon" href="{% static 'img/logo.ico' %}">
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
-    <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
-    <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
-    <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap5.min.css">
-    <link rel="stylesheet" type="text/css"
-          href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css">
-    <link rel="stylesheet" type="text/css"
-          href="https://cdn.datatables.net/buttons/1.7.0/css/buttons.dataTables.min.css">
-{#    <link rel="stylesheet" type="text/css" href="{% static 'gmao/css/home.css' %}">#}
-    <link rel="stylesheet" type="text/css" href="{% static 'gmao/css/main.css' %}">
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-
+    <link rel="stylesheet" href="{% static 'gmao/css/main.css' %}">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <!-- DataTables CSS -->
+    <link href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css" rel="stylesheet">
+    <link href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css" rel="stylesheet">
+    <link href="https://cdn.datatables.net/buttons/2.2.2/css/buttons.dataTables.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+{#    <link rel="stylesheet" href="{% static 'css/custom.css' %}">#}
     {% block extra_css %}{% endblock extra_css %}
     <title>{% block title %}M E I{% endblock title %}</title>
 </head>
 <body>
-<div class="wrapper">
-    <header>
-{#        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">#}
-{#            <div class="col-sm">#}
-{#                <a class="navbar-brand flex-grow-1" style="color: aliceblue; text-align: center; margin-left: 25px;">#}
-{#                    {% block navbar-content %}#}
-{#                        <i style="color: #0dcaf0;" class="fa-solid fa-user-lock"></i>&nbsp;&nbsp;Accès vérouillé#}
-{#                    {% endblock navbar-content %}#}
-{#                </a>#}
-{#            </div>#}
-{#            <div class="ms-auto">#}
-{#                {% block nav-btn %}#}
-{#                {% endblock nav-btn %}#}
-{#            </div>#}
-{#        </nav>#}
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="padding: 10px 20px;">
-    <div class="col-sm">
-        <a href="{% url 'gmao:home' %}" class="navbar-brand flex-grow-1" style="color: aliceblue; text-align: center;">
-            
-            {% block navbar-content %}
-                <i style="color: #0dcaf0;" class="fa-solid fa-user-lock"></i>&nbsp;&nbsp;Accès vérouillé
-            {% endblock navbar-content %}
-        </a>
-    </div>
-    <div class="ms-auto">
-        {% block nav-btn %}
-        {% endblock nav-btn %}
-    </div>
-</nav>
-    </header>
-    <div class="container-fluid" style="padding-top: 70px">
-        {% block content %}
-            <div class="login-container">
-                <h2 class="text-center mb-4">Connexion</h2>
-                <form method="post" class="login-form">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label for="username">Nom d'utilisateur</label>
-                        <input type="text" class="form-control" id="username" name="username" required>
+    <div class="wrapper">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+                <div class="container-fluid">
+                    <a href="{% url 'gmao:home' %}" class="navbar-brand">
+                        {% block navbar-content %}
+                            <i class="fa-solid fa-user-lock text-info"></i>&nbsp;&nbsp;Accès vérouillé
+                        {% endblock navbar-content %}
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <div class="navbar-nav ms-auto">
+                            {% block nav-btn %}{% endblock nav-btn %}
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="password">Mot de passe</label>
-                        <input type="password" class="form-control" id="password" name="password" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Se connecter</button>
-                </form>
+                </div>
+            </nav>
+        </header>
+        <main class="container-fluid" style="padding-top: 70px">
+            {% block content %}
+                <!-- Default content -->
+            {% endblock content %}
+        </main>
+        <footer class="bg-dark text-center text-white py-3">
+            <div class="container">
+                <p class="m-0">
+                    Copyright &copy; {% now "Y" %} | Made with 
+                    <i class="fas fa-bolt text-danger"></i> by 
+                    <a href="#" class="text-info text-decoration-none">mei</a>
+                </p>
             </div>
-        {% endblock content %}
+        </footer>
     </div>
-    <footer class="bg-dark text-center text-lg-start" id="footer">
-        <div class="text-center p-1" style="background-color: rgba(0,0,0,0.2);">
-            Copyright: &copy; {% now "Y" %} Allright reserved | Made with
-            <i class="text-danger fas fa-bolt" style="font-size: 15px;"></i> by
-            <a href="#" target="_blank" style="color: #0dcaf0; text-decoration: none;">mei</a>
-        </div>
-    </footer>
-</div>
-<script src="{% static 'js/jquery.js' %}"></script>
-<script src="{% static 'js/popper.js' %}"></script>
-<script src="{% static 'js/bootstrap.js' %}"></script>
-<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
-<script type="text/javascript"
-        src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/dataTables.buttons.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.html5.min.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.print.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
 
-{% block extra_js %}
-{% endblock extra_js %}
+    <!-- Bootstrap JS Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- DataTables JS -->
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
+    <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.2.2/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.2.2/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.2.2/js/buttons.print.min.js"></script>
+    <!-- Moment.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <!-- Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Custom JS -->
+{#    <script src="{% static 'js/custom.js' %}"></script>#}
+    {% block extra_js %}{% endblock extra_js %}
 </body>
 </html>
