--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}">
-    <link rel="stylesheet" href="{% static 'gmao/css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'gmao/css/home.css' %}">
     <!-- Bootstrap CSS -->
 {#    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">#}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
