--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css"
           href="https://cdn.datatables.net/buttons/1.7.0/css/buttons.dataTables.min.css">
 {#    <link rel="stylesheet" type="text/css" href="{% static 'gmao/css/home.css' %}">#}
-    <link rel="stylesheet" type="text/css" href="{% static 'gmao/css/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'gmao/css/home.css' %}">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
     {% block extra_css %}{% endblock extra_css %}
