--- a/templates/base.html
+++ b/templates/base.html
@@ -47,21 +47,29 @@
     </header>
     <div class="container-fluid" style="padding-top: 70px">
         {% block content %}
-            <div class="login-container">
-                <h2 class="text-center mb-4">Connexion</h2>
-                <form method="post" class="login-form">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <label for="username">Nom d'utilisateur</label>
-                        <input type="text" class="form-control" id="username" name="username" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Mot de passe</label>
-                        <input type="password" class="form-control" id="password" name="password" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Se connecter</button>
-                </form>
+            <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6 col-lg-4">
+                <div class="login-container">
+                    <h2 class="text-center mb-4">Connexion</h2>
+                    <form method="post" class="login-form">
+                        {% csrf_token %}
+                        <div class="form-group mb-3">
+                            <label for="username">Nom d'utilisateur</label>
+                            <input type="text" class="form-control" id="username" name="username" required>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="password">Mot de passe</label>
+                            <input type="password" class="form-control" id="password" name="password" required>
+                        </div>
+                        <div class="d-grid">
+                            <button type="submit" class="btn btn-primary">Se connecter</button>
+                        </div>
+                    </form>
+                </div>
             </div>
+        </div>
+    </div>
         {% endblock content %}
     </div>
     <footer class="bg-dark text-center text-lg-start" id="footer">
