--- a/gmao/static/gmao/css/main.css
+++ b/gmao/static/gmao/css/main.css
@@ -11,11 +11,15 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
 }
 
 .wrapper {
     flex: 1 0 auto;
-    padding-bottom: 40px; /* Ajustez selon la hauteur du footer */
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 60px; /* Ajustez selon la hauteur du footer */
+
 }
 
 header, footer {
@@ -44,6 +48,7 @@ footer {
 }
 
 .container-fluid {
+    flex: 1 0 auto;
     width: 100%;
     padding-right: 15px;
     padding-left: 15px;
@@ -51,6 +56,23 @@ footer {
     margin-left: auto;
     max-width: 100vw;
     box-sizing: border-box;
+    padding-bottom: 60px; /* Ajoutez un padding en bas pour éviter le chevauchement avec le footer */
+}
+
+footer {
+    flex-shrink: 0;
+    height: 40px;
+    background-color: #343a40;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.8rem;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000; /* Assurez-vous que le footer est au-dessus du contenu */
 }
 
 main {
@@ -174,4 +196,8 @@ table.dataTable tbody tr.status-ATD {
     .login-container {
         margin: 0 15px;
     }
+}
+
+.technicien-portfolio-content {
+    margin-bottom: 60px; /* Ajoutez une marge en bas pour éviter le chevauchement avec le footer */
 }
