--- a/gmao/templates/gmao/home.html
+++ b/gmao/templates/gmao/home.html
@@ -118,7 +118,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-info text-white">
-                        <h5 class="mb-0">Mon portefeuille de doléances</h5>
+                        <h5 class="technicien-portfolio-content mb-0">Mon portefeuille de doléances</h5>
                     </div>
                     <div class="card-body">
                         <div id="portfolioContainer"></div>
