--- a/gmao/templates/gmao/liste_interventions.html
+++ b/gmao/templates/gmao/liste_interventions.html
@@ -30,7 +30,7 @@
                                 <tr>
                                     <th>NDI</th>
                                     <th>Panne</th>
-                                    <th>Début prise en charge</th>
+                                    <th>Prise en charge</th>
                                     <th>Début travail</th>
                                     <th>Fin travail</th>
                                     <th>Statut</th>
