--- a/gmao_teams/templates/gmao_teams/gestion_equipes.html
+++ b/gmao_teams/templates/gmao_teams/gestion_equipes.html
@@ -76,10 +76,41 @@
             </div>
         </div>
     </div>
+    <!-- Modal pour créer une équipe -->
+    <div class="modal fade" id="creerEquipeModal" tabindex="-1" role="dialog" aria-labelledby="creerEquipeModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="creerEquipeModalLabel">Créer une nouvelle équipe</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form id="creerEquipeForm">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <label for="nom">Nom de l'équipe</label>
+                            <input type="text" class="form-control" id="nom" name="nom" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="description">Description</label>
+                            <textarea class="form-control" id="description" name="description" rows="3"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                    <button type="button" class="btn btn-primary" id="saveEquipe">Créer l'équipe</button>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'gmao/css/main.css' %}">
     <link rel="stylesheet" href="{% static 'gmao_teams/css/equipes.css' %}">
     <style>
         .list-group-item {
