--- a/gmao/static/gmao/css/main.css
+++ b/gmao/static/gmao/css/main.css
@@ -12,6 +12,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    padding-bottom: 30px;
 }
 
 .wrapper {
@@ -19,7 +20,6 @@ body {
     display: flex;
     flex-direction: column;
     padding-bottom: 60px; /* Ajustez selon la hauteur du footer */
-
 }
 
 header, footer {
@@ -160,8 +160,30 @@ table.dataTable {
     padding: 2rem 0;
 }
 
+#personnel-section {
+    padding-bottom: -50px;
+}
+
+#personnel-section {
+    margin-bottom: 15px;
+}
+
 #doleances-section, #personnel-section {
-    padding-top: 70px;
+    padding-top: 10px;
+}
+
+.full-height-section {
+    min-height: auto;
+    padding: 1rem 0;
+    margin-bottom: 2rem;
+}
+
+.card {
+    margin-bottom: 1rem;
+}
+
+.table-responsive {
+    margin-bottom: 0;
 }
 
 /* Styles pour les différents états de doléance */
@@ -235,3 +257,5 @@ table.dataTable tbody tr.status-ATD {
 .technicien-portfolio-content {
     margin-bottom: 60px; /* Ajoutez une marge en bas pour éviter le chevauchement avec le footer */
 }
+
+
