--- a/gmao/templates/gmao/home.html
+++ b/gmao/templates/gmao/home.html
@@ -198,7 +198,7 @@
                     <div class="card-header bg-info text-white">
                         <h5 class="mb-0">Mon portefeuille de doléances</h5>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body overflow-auto">
                         <div id="portfolioContainer">
                         </div>
 
