--- a/gmao/templates/gmao/home.html
+++ b/gmao/templates/gmao/home.html
@@ -192,16 +192,17 @@
 
 
     {% else %}
-        <div class="row mb-4">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header bg-info text-white">
-                        <h5 class="mb-0">Mon portefeuille de doléances</h5>
-                    </div>
-                    <div class="card-body overflow-auto">
-                        <div id="portfolioContainer">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-header bg-info text-white">
+                            <h5 class="mb-0">Mon portefeuille de doléances</h5>
                         </div>
-
+                        <div class="card-body">
+                            <div id="portfolioContainer">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
