--- a/gmao/templates/gmao/home.html
+++ b/gmao/templates/gmao/home.html
@@ -200,7 +200,7 @@
                             <h5 class="mb-0">Mon portefeuille de doléances</h5>
                         </div>
                         <div class="card-body">
-                            <div id="portfolioContainer">
+                            <div id="portfolioContainer" class="w-100">
                             </div>
                         </div>
                     </div>
