--- a/gmao/templates/gmao/home.html
+++ b/gmao/templates/gmao/home.html
@@ -185,13 +185,15 @@
                     <div class="card-header bg-info text-white">
                         <h5 class="mb-0">Mon portefeuille de doléances</h5>
                     </div>
-                    <div class="card-body">
-                        <div id="portfolioContainer" class="table-responsive">
+                    <div class="card-body p-0"> <!-- Supprimez le padding ici -->
+                        <div id="portfolioContainer">
+                            <!-- Le tableau sera inséré ici par JavaScript -->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
     {% endif %}
 
 
