--- a/templates/base.html
+++ b/templates/base.html
@@ -18,14 +18,14 @@
           href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css">
     <link rel="stylesheet" type="text/css"
           href="https://cdn.datatables.net/buttons/1.7.0/css/buttons.dataTables.min.css">
-    {#    <link rel="stylesheet" type="text/css" href="{% static 'gmao/css/home.css' %}">#}
-    <link rel="stylesheet" type="text/css" href="{% static 'gmao/css/home.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'gmao/css/home.css' %}">
+{#    <link rel="stylesheet" type="text/css" href="{% static 'gmao/css/main.css' %}">#}
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" type="text/css"
           href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css">
 
     {% block extra_css %}{% endblock extra_css %}
-    <title>{% block title %}M E I{% endblock title %}</title>
+    <title>{% block title %}M E I {% endblock title %}</title>
 </head>
 <body>
 <div class="wrapper">
