--- a/templates/base.html
+++ b/templates/base.html
@@ -18,8 +18,8 @@
           href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css">
     <link rel="stylesheet" type="text/css"
           href="https://cdn.datatables.net/buttons/1.7.0/css/buttons.dataTables.min.css">
-        <link rel="stylesheet" type="text/css" href="{% static 'gmao/css/home.css' %}">
-{#    <link rel="stylesheet" type="text/css" href="{% static 'gmao/css/main.css' %}">#}
+    {#        <link rel="stylesheet" type="text/css" href="{% static 'gmao/css/home.css' %}">#}
+    <link rel="stylesheet" type="text/css" href="{% static 'gmao/css/main.css' %}">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" type="text/css"
           href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css">
@@ -30,20 +30,52 @@
 <body>
 <div class="wrapper">
     <header>
-
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="padding: 10px 20px;">
-            <div class="col-sm">
-                <a href="{% url 'gmao:home' %}" class="navbar-brand flex-grow-1"
-                   style="color: aliceblue; text-align: center;">
-
-                    {% block navbar-content %}
-                        <i style="color: #0dcaf0;" class="fa-solid fa-user-lock"></i>&nbsp;&nbsp;Accès vérouillé
-                    {% endblock navbar-content %}
-                </a>
-            </div>
-            <div class="ms-auto">
-                {% block nav-btn %}
-                {% endblock nav-btn %}
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid" style="padding: 0">
+                <a class="navbar-brand" href="{% url 'gmao:home' %}">MEI</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        {% if user.is_authenticated %}
+                            {% if user.role == 'ADMIN' %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'gmao:liste_interventions' %}">Liste des
+                                        interventions</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'gmao:toutes_les_doleances' %}">Liste des
+                                        doléances</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'gmao_teams:gestion_equipes' %}">Gestion des
+                                        équipes</a>
+                                </li>
+                            {% elif user.role == 'TECH' %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'gmao:liste_interventions' %}">Liste des
+                                        interventions</a>
+                                </li>
+                            {% endif %}
+                        {% endif %}
+                    </ul>
+                    {% if user.is_authenticated %}
+                        <div class="d-flex align-items-center">
+                    <span class="text-light me-3">
+                        <i class="fa-solid fa-user-alt" style="color: hsl(137, 90%, 50%);"></i>
+                        {{ user.first_name }} {{ user.last_name }}
+                    </span>
+                            {% if user.role == 'ADMIN' %}
+                                <span id="current-time" class="text-light"></span>
+                            {% endif %}
+                            <a href="{% url 'accounts:logout-admin' %}" class="btn btn-outline-danger btn-sm">
+                                <i class="fas fa-sign-out"></i>
+                            </a>
+                        </div>
+                    {% endif %}
+                </div>
             </div>
         </nav>
     </header>
@@ -100,9 +132,30 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
 <script type="text/javascript"
         src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
-
+{% block page_specific_js %}
+    <script>
+        {% if user.is_authenticated and user.role == 'ADMIN' %}
+            function updateTime() {
+                const now = new Date();
+                const options = {
+                    weekday: 'long',
+                    year: 'numeric',
+                    month: 'long',
+                    day: 'numeric',
+                    hour: '2-digit',
+                    minute: '2-digit',
+                    second: '2-digit'
+                };
+                document.getElementById('current-time').textContent = now.toLocaleDateString('fr-FR', options);
+            }
+            setInterval(updateTime, 1000);
+            updateTime(); // Initial call
+        {% endif %}
+    </script>
+{% endblock page_specific_js %}
 
 {% block extra_js %}
+
 {% endblock extra_js %}
 </body>
 </html>
