--- a/templates/base.html
+++ b/templates/base.html
@@ -30,9 +30,9 @@
 <body>
 <div class="wrapper">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container-fluid" style="padding: 0">
-                <a class="navbar-brand" href="{% url 'gmao:home' %}">MEI</a>
+                <a class="navbar-brand" href="{% url 'gmao:home' %}">GMAO</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -62,17 +62,15 @@
                         {% endif %}
                     </ul>
                     {% if user.is_authenticated %}
-                        <div class="d-flex align-items-center">
-                    <span class="text-light me-3">
+                        <div class="d-flex flex-column flex-lg-row align-items-start align-items-lg-center">
+                    <span class="text-light me-lg-3 mb-2 mb-lg-0">
                         <i class="fa-solid fa-user-alt" style="color: hsl(137, 90%, 50%);"></i>
                         {{ user.first_name }} {{ user.last_name }}
                     </span>
                             {% if user.role == 'ADMIN' %}
-                                <span id="current-time" class="text-light"></span>
+                                <span id="current-time" class="text-light me-lg-3 mb-2 mb-lg-0"></span>
                             {% endif %}
-                            <a href="{% url 'accounts:logout-admin' %}" class="btn btn-outline-danger btn-sm">
-                                <i class="fas fa-sign-out"></i>
-                            </a>
+                            <a href="{% url 'accounts:logout-admin' %}" class="btn btn-outline-danger btn-sm">Logout</a>
                         </div>
                     {% endif %}
                 </div>
